# src/app/routes/warehouse/components/out-batch/out-batch.component.ts
@@ -1,21 +1,22 @@
 import { Component, Input, OnInit } from '@angular/core';
-import { IStoreInItem, MOperation } from '@routes/warehouse/models';
+import { IStoreInItem, IStoreOutBatchItem, MOperation } from '@routes/warehouse/models';
 import { WarehouseService } from 'src/app/api/services';
 
 @Component({
-  selector: 'app-batch',
-  templateUrl: './batch.component.html',
-  styleUrls: ['./batch.component.less']
+  selector: 'app-out-batch',
+  templateUrl: './out-batch.component.html',
+  styleUrls: ['./out-batch.component.less']
 })
-export class BatchComponent implements OnInit {
-  @Input() goodsId: number;
+export class OutBatchComponent implements OnInit {
+  @Input() goods_id: number;
+  @Input() out_code: string;
 
   page = {
     pageIndex: 1,
     pageSize: 10,
     total: 1
   };
-  batchList: IStoreInItem[] = [];
+  batchList: IStoreOutBatchItem[] = [];
   operationMap = MOperation;
 
   constructor(private wmsService: WarehouseService) {}
@@ -29,13 +30,14 @@ export class BatchComponent implements OnInit {
       this.page.pageIndex = 1;
     }
     this.wmsService
-      .getApiWarehouseBatch({
-        goods_id: this.goodsId.toString(),
+      .getApiWarehouseOutBatch({
+        goods_id: this.goods_id.toString(),
+        out_code: this.out_code,
         page_index: this.page.pageIndex.toString(),
         page_size: this.page.pageSize.toString()
       })
       .subscribe((res) => {
-        this.batchList = res.data.items as IStoreInItem[];
+        this.batchList = res.data.items as IStoreOutBatchItem[];
         this.page.total = res.data.total;
       });
   }
